# reforis-storage

./: .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  babel.cfg  pyproject.toml  setup.py
js/: babel.config.js  package-lock.json  package.json  webpack.config.js
js/src/: API.js  app.js
js/src/storage/: CurrentState.js  DrivesOperations.js  Storage.css  Storage.js  constants.js  hooks.js  utils.js
js/src/storage/Drives/: ConfirmationModal.js  Drives.js  DrivesTable.js  DrivesTableRow.js  RAID.js  RAIDHelpTexts.js
js/src/storage/UUIDs/: UUIDs.js  UUIDsActionButtons.js  UUIDsTable.js  UUIDsTableRow.js
js/src/storage/__tests__/: DrivesOperations.test.js  Storage.test.js
js/src/storage/currentState/: ActiveAlert.js  BrokenSetup.js  BrokenSetupAlert.js  CurrentState.js  CurrentStateTable.js  PendingMigration.js  PendingMigrationAlert.js  RebootButton.js
reforis_storage/: __init__.py
reforis_storage/translations/: messages.pot
reforis_storage/translations/cs/LC_MESSAGES/: messages.po
reforis_storage/translations/da/LC_MESSAGES/: messages.po
reforis_storage/translations/de/LC_MESSAGES/: messages.po
reforis_storage/translations/el/LC_MESSAGES/: messages.po
reforis_storage/translations/en/LC_MESSAGES/: messages.po
reforis_storage/translations/fi/LC_MESSAGES/: messages.po
reforis_storage/translations/fo/LC_MESSAGES/: messages.po
reforis_storage/translations/fr/LC_MESSAGES/: messages.po
reforis_storage/translations/hr/LC_MESSAGES/: messages.po
tests/: conftest.py  test_api.py  test_example.py  utils.py
(+26 files in other folders)
