[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reforis-storage"
version = "1.2.0"
description = "reForis Storage plugin allows saving large amounts of data on an external storage device."
readme = "README.md"
license = "GPL-3.0-or-later"
authors = [
    { name = "CZ.NIC, z.s.p.o. (https://www.nic.cz/)", email = "software@turris.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Flask",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = ["Babel", "flask", "Flask-Babel", "reforis"]

[project.optional-dependencies]
devel = ["pytest", "ruff", "werkzeug"]

[project.entry-points."foris.plugins"]
reforis_storage = "reforis_storage:storage"

[tool.hatch.build.targets.sdist]
include = ["/js", "/reforis_storage", "/reforis_static"]

[tool.hatch.build.targets.wheel.hooks.reforis]
dependencies = ["hatch-reforis"]
reforis_module = "reforis_storage"

[tool.hatch.build.targets.wheel]
include = ["/reforis_storage", "/reforis_static"]
exclude = ["**/*.po", "**/*.pot"]

[tool.ruff]
line-length = 120
